# capture-library

./: .gitignore  CMakeLists.txt  CMakePresets.json  NEXT_ITERATIONS.md  README.md
.github/workflows/: build.yml
examples/: benchmark_fps.cpp  capture_loop.cpp  capture_once.cpp  capture_stress.cpp
include/capture/: backend.h  error.h  factory.h  frame.h  frame_validation.h
python/: bindings.cpp
src/common/: error.cpp  factory.cpp  frame_validation.cpp  monotonic_time.cpp  monotonic_time.h  png_writer.cpp  png_writer.h
src/linux/: backend_linux_portal_pipewire.cpp  backend_linux_portal_pipewire.h
src/macos/: backend_macos_screencapturekit.cpp  backend_macos_screencapturekit.h
src/windows/: backend_windows_wgc.cpp  backend_windows_wgc.h  d3d11_helpers.cpp  d3d11_helpers.h  monitor_enum.cpp  monitor_enum.h  wgc_interop.cpp  wgc_interop.h
test-fullscreen-mss/: README.md  performance_monitor.py
